<resources>
    <string name="app_name">teleprompter</string>
    <string name="display_content">Display Content</string>
    <string name="display_settings">Display Settings</string>
    <string name="show">Show</string>
    <string name="home_et_hint">Enter your script here…</string>
    <string name="home_import">Import</string>
    <string name="home_save">Save</string>
    <string name="text_color">Text Color</string>
    <string name="float_background">Background</string>
    <string name="import_success">import success.</string>
    <string name="import_fail">clipboard is empty.</string>
    <string name="save_success">save success.</string>
    <string name="text_size">TextSize</string>
    <string name="show_local_image">Show local image</string>
</resources>