<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/display_content"
            android:textColor="@color/textNormal"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_exhibit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_card"
            android:drawableLeft="@drawable/ic_play"
            android:drawableTint="@color/textNormal"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/show"
            android:textColor="@color/textNormal" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/home_et"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_card"
            android:gravity="start"
            android:hint="@string/home_et_hint"
            android:padding="15dp"
            android:textColor="@color/subText"
            android:textColorHint="@color/subText" />

        <ImageView
            android:id="@+id/home_et_clear"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_import"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/selector_normal_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_paste"
                app:tint="@color/textNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/home_import"
                android:textColor="@color/textNormal"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_save"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_normal_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:tint="@color/textNormal"
                android:src="@drawable/ic_save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/home_save"
                android:textColor="@color/textNormal"
                android:textSize="17dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/display_settings"
            android:textColor="@color/textNormal"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/selector_normal_btn"
            android:drawableLeft="@drawable/ic_setting"
            android:drawablePadding="4dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="6dp"
            android:text="设置"
            android:drawableTint="@color/textNormal"
            android:textColor="@color/textNormal"
            android:textSize="18dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/home_color_pick"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_color"
                        android:textColor="@color/textNormal"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/home_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/float_background"
                        android:textColor="@color/textNormal"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/home_background_color"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_card"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size"
                    android:textColor="@color/textNormal"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/home_text_size_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="30"
                    android:min="10" />

                <TextView
                    android:id="@+id/home_text_size_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="15"
                    android:textColor="@color/textNormal"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_card"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="图片透明度"
                    android:textColor="@color/textNormal"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/home_image_alpha_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:max="100"
                    android:min="0" />

                <TextView
                    android:id="@+id/home_image_alpha_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="15"
                    android:textColor="@color/textNormal"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_show_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/selector_normal_btn"
                android:gravity="center"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_local_image"
                    android:textColor="@color/textNormal" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>